fix: light mode showcase card contrast

--- a/src/pages/docs/showcase.module.css
+++ b/src/pages/docs/showcase.module.css
@@ -16,3 +16,7 @@
 .paragraphReset {
     text-decoration: none;
 }
+
+.layout {
+    background-color: var(--ifm-color-emphasis-100);
+}
